--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,7 @@ footer,
 #current-temperature,
 #weather-description,
 #weather-data,
+#last-update,
 #feels-like,
 #chronology {
   text-align: center;
@@ -59,6 +60,10 @@ footer,
   font-size: 50px;
 }
 
+#weather-description {
+  font-size: 35px;
+}
+
 #city-input {
   width: 30%;
   padding: 5px 6px;
@@ -66,7 +71,8 @@ footer,
 
 #city-submit {
   padding: 5px 8px;
-  height: 30px;
+  background-color: #000000;
+  color: #ffffff;
 }
 
 #feels-like {
@@ -82,6 +88,11 @@ footer,
   font-weight: 700;
 }
 
+#last-update {
+  font-size: 14px;
+  color: #0000006e;
+}
+
 .flex-temperature {
   display: flex;
   justify-content: center;
@@ -93,6 +104,7 @@ strong {
 
 input {
   border-radius: 10px;
+  border: none;
 }
 
 footer {
